a few restructurings
